cambiamos el title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css">
-    <title>Vite App</title>
+    <title>Postre Majo</title>
   </head>
   <body class=" bg-red-100 max-w-screen-xl mx-auto px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
     <main class="lg:flex lg:justify-between lg:gap-4">
